k8s/user-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-management-backend
  template:
    metadata:
      labels:
        app: user-management-backend
    spec:
      containers:
      - name: user-management-container
        image: cmaundu/bytestream-user-management-service:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.25"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
