k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytestream-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/limit-rpm: "5"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
spec:
  ingressClassName: nginx  
  rules:
  - host: bytestream.local
    http:
      paths:
      - path: /streaming
        pathType: Prefix
        backend:
          service:
            name: streaming-service
            port:
              number: 8000
      - path: /browsing
        pathType: Prefix
        backend:
          service:
            name: browsing-service
            port:
              number: 8000
      - path: /usermanagement
        pathType: Prefix
        backend:
          service:
            name: user-management-service
            port:
              number: 8000
